# python-project-template

./: .editorconfig  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVTOOLS.md  README.md  pyproject.toml  repo_to_remote_git_server.sh  setup.cfg
{{cookiecutter.repo_name}}/.github/workflows/: ci.yml
{{cookiecutter.repo_name}}/docs/: Makefile  conf.py  index.md  make.bat
{{cookiecutter.repo_name}}/lightning_src/: RUNNER_REASONS.md  export.py  runner.py
{{cookiecutter.repo_name}}/lightning_src/data/datamodules/: __init__.py  black_or_white.py
{{cookiecutter.repo_name}}/lightning_src/data/datasets/: black_or_white.py
{{cookiecutter.repo_name}}/lightning_src/gin-files/dummy-example/: dummy-allin.gin  dummy-datamodule.gin  dummy-module.gin
{{cookiecutter.repo_name}}/lightning_src/modules/: dummy.py
{{cookiecutter.repo_name}}/lightning_src/vscode/: launch.json  settings.json
{{cookiecutter.repo_name}}/src/{{cookiecutter.pkg_shelf}}/{{cookiecutter.pkg_name}}/: __init__.py  main.py
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.pkg_name}}.py
